# tauri-ai-assistant

./: .gitignore
multibot/: Cargo.toml  README.md  config.example.json  personality.json  personality_template.json  start.bat  tauri.conf.json
multibot/src/: api.rs  calculator.rs  commands.rs  define.rs  main.rs  memory.rs  state.rs  time.rs  weather.rs
